--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,4 +33,4 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-              az storage blob upload-batch --account-name mvmtestcicd --auth-mode key -d '$web' --source build/
+              az storage blob upload-batch --account-name mvmtestcicd --auth-mode key -d '$web' --source build/ --content-cache-control "no-cache"
